_sass/base.scss
/**
  * Basic styling
  */
body {
  background: var(--background);
  color: var(--text);
  transition: color 1s cubic-bezier(0.19, 1, 0.22, 1),
    background 1s cubic-bezier(0.19, 1, 0.22, 1);
  font-family: $bodyFont;
  font-size: $fontSize;
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  -webkit-font-feature-settings: 'kern' 1;
  -moz-font-feature-settings: 'kern' 1;
  -o-font-feature-settings: 'kern' 1;
  font-feature-settings: 'kern' 1;
  font-kerning: normal;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex-grow: 1;
  overflow-x: hidden;
}

/**
  * Wrapper
  */
.wrapper {
  max-width: -webkit-calc(700px - (30px * 2));
  max-width: calc(700px - 30px * 2);
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}
@media screen and (max-width: 800px) {
  .wrapper {
    max-width: -webkit-calc(700px - (30px));
    max-width: calc(700px - (30px));
    padding-right: 15px;
    padding-left: 15px;
  }
}

/**
  * Site body/content
  */
#latest-posts {
  margin-top: 0;
}

.page-box-margin {
  margin-top: 0px;
  margin-bottom: 20px;
}

.blog-post {
}
.blog-title {
}

.post-date {
  font-size: 0.8rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--textAlt);
  font-family: $headerFont;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
ul,
ol,
dl,
figure,
.highlight {
  margin-bottom: 14px;
}

h2 {
  margin-top: 42px;
}
h3 {
  margin-top: 36px;
}
h4 {
  margin-top: 30px;
}
h5 {
  margin-top: 24px;
}
h6 {
  margin-top: 18px;
}

ul {
  padding-left: 13px;
}

/**
  * Site header
  */
header {
  width: 100%;
  height: 100px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  font-family: $headerFont;
}

.nav {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.nav-title {
  color: var(--textAlt);
  font-weight: 500;
}
.nav-title:visited {
  color: var(--textAlt);
}

.nav-link {
  color: var(--textAlt);
  font-size: 0.8rem;
}
.nav-link:visited {
  color: var(--textAlt);
}

.current {
  color: var(--textAlt);
  text-decoration: underline;
  text-underline-offset: auto;
  text-decoration-thickness: from-font;
}

.nav svg {
  display: flex;
}

#theme-toggle {
  color: var(--textAlt);
  cursor: pointer;
  display: flex;
}

.nav ul {
  display: flex;
  list-style: none;
  gap: 1rem;
  margin: 0;
  padding: 0;
}

.nav ul li a {
  position: relative;
}

/* nav-link bottom line */
.nav ul li a::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background: var(--text);
  transform: scaleX(0);
  transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
  transform-origin: right center;
}

.nav ul li a:hover::after {
  transform: scaleX(1);
  transform-origin: left center;
  transition-duration: 0.6s;
}

a {
  color: var(--textLink);
  text-decoration: none;
  transition: color 0.6s cubic-bezier(0.19, 1, 0.22, 1);
}
a:visited {
  color: var(--textLinkVisited);
  text-decoration: none;
}
/* a:hover {
  color: var(--text);
  text-decoration: none;
} */

/**
 * Footer
 */
footer {
  width: 100%;
  height: 100px;
  display: flex;
  flex-direction: row;
  align-items: center;
}
footer p {
  font-size: 0.8rem;
  margin: auto;
}

/**
 * Images
 */
img {
  max-width: 100%;
  vertical-align: middle;
}

p:has(.blog-img) {
  display: flex;
  align-items: center;
  justify-content: center;
}

.img-box {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.me {
  max-width: 50%;
  max-height: 100%;
  filter: grayscale(var(--grayscale));
}

/**
 * Images for blog with overlay
 */
.overlay {
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  overflow: auto;
  background: rgba(0, 0, 0, 0);
}

.container {
  background: rgba(0, 0, 0, 0);
  transition: background 0.4s cubic-bezier(0.19, 1, 0.22, 1);
}
.container.container-show {
  background: rgba(0, 0, 0, 0.5);
}

.overlay .container {
  position: relative;
  width: 100%;
  height: 100%;
}
.overlay .container {
  > .show {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 90%;
    max-height: 90%;
    z-index: 3;
    -webkit-animation-name: open;
    -webkit-animation-duration: 0.5s;
    -webkit-animation-timing-function: ease;
    animation-name: open;
    animation-duration: 0.5s;
    animation-timing-function: ease;
  }
  > .close {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 90%;
    max-height: 90%;
    z-index: 2;
    -webkit-animation-name: close;
    -webkit-animation-duration: 0.4s;
    -webkit-animation-timing-function: ease;
    animation-name: close;
    animation-duration: 0.4s;
    animation-timing-function: ease;
  }
}

@-webkit-keyframes open {
  0% {
    transform: translate(-50%, -50%) scale(0.3);
    opacity: (0);
  }
  40% {
    opacity: (1);
  }
  100% {
    transform: translate(-50%, -50%) scale(1);
  }
}

@keyframes open {
  0% {
    transform: translate(-50%, -50%) scale(0.3);
    opacity: (0);
  }
  40% {
    opacity: (1);
  }
  100% {
    transform: translate(-50%, -50%) scale(1);
  }
}

@-webkit-keyframes close {
  0% {
    transform: translate(-50%, -50%) scale(1);
  }
  30% {
    opacity: (1);
  }
  60% {
    opacity: (0);
  }
  100% {
    transform: translate(-50%, -50%) scale(0.4);
  }
}

@keyframes close {
  0% {
    transform: translate(-50%, -50%) scale(1);
  }
  30% {
    opacity: (1);
  }
  60% {
    opacity: (0);
  }
  100% {
    transform: translate(-50%, -50%) scale(0.4);
  }
}

/**
 * Figures
 */
figure {
  margin: 0;
  padding: 0;
}

figure > img {
  display: block;
}

/**
 * Code formatting
 */
.highlight {
  margin: 14px 0;
  border: 2px solid #23252e; /* Set your border thickness and color */
  border-radius: 5px; /* Adjust this value for more or less rounding */
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
}

pre,
code {
  font-size: 0.9375em;
  line-height: 1.3;
}

code {
  font-family: $codeFont;
}

pre {
  margin: 0px;
  padding: 14px 10px;
  overflow-x: auto;

  > code {
    border: 0;
    padding-right: 0;
    padding-left: 0;
  }
}

:not(pre) {
  > code {
    color: #ff0000;
  }
}

/**
 * Markdown
 */
hr {
  border: 0;
  border-top: 1px solid var(--hr);
}

mark {
  background-color: var(--background);
  color: var(--mark);
  font-family: $codeFont;
  font-size: 0.875em;
}

